edit icon manifest.json & index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffff" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
       content="HopePoints is a platform to report about harrassment and abuse in public places."
