--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ffffff" />
   <meta name="description" content="HopePoints is a platform to report about harrassment and abuse in public places." />
+  <meta name="dicoding:email" content="fakhri.raihan13@gmail.com">
   <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet" />
